# data-ferret

./: Cargo.toml  README.md
db/key1/: 1234  1243
db/key2/: 1234
src/: main.rs
src/db/: database.rs  mod.rs  persistence.rs  store.rs
src/utils/: config.rs  logger.rs  mod.rs
tests/: database_tests.rs  in_memory_db_tests.rs
