[package]
name = "data_ferret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[test]]
name = "database_tests"
path = "tests/database_tests.rs"